--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>HelloWorld</name>
+	<name>xebia-bcp7-week-05-master</name>
 	<comment></comment>
 	<projects>
 	</projects>
